--- a/.tridactylrc
+++ b/.tridactylrc
@@ -29,6 +29,7 @@ containercreate 58:Botany green circle
 containercreate 59:Zoology green circle
 containercreate 6:AppliedSciences green circle
 containercreate 64:Household green circle
+containercreate 658:Business green circle
 containercreate 69:Building green circle
 containercreate 7:Recreation green circle
 containercreate 72:Architecture green circle
