--- a/.tridactylrc
+++ b/.tridactylrc
@@ -11,6 +11,7 @@ containercreate -057.87:Student red fingerprint
 containercreate -059.2:GroupsParties blue fingerprint
 containercreate 004:ComputerScience green circle
 containercreate 004.6:Data green circle
+containercreate 004.92:ComputerGraphics green circle
 containercreate 005:Management green circle
 containercreate 1:Philosophy green circle
 containercreate 2:Religion green circle
@@ -51,6 +52,8 @@ containercreate 94:History green circle
 " Autocontainers
 " 004:ComputerScience
 autocontain -s udcsummary\.info 004.6:Data
+" 004.92:ComputerGraphics
+autocontain -s tinkercad\.com 004.92:ComputerGraphics
 " 64:Household
 autocontain -s casamazza\.duckdns\.org 64:Household
 autocontain -s tuya\.com 64:Household
