--- a/.tridactylrc
+++ b/.tridactylrc
@@ -29,6 +29,7 @@ containercreate 57:Biology green circle
 containercreate 58:Botany green circle
 containercreate 59:Zoology green circle
 containercreate 6:AppliedSciences green circle
+containercreate 61:MedicalSciences green circle
 containercreate 64:Household green circle
 containercreate 656:Transport green circle
 containercreate 658:Business green circle
